--- a/Browse File Upload/style.css
+++ b/Browse File Upload/style.css
@@ -6,7 +6,7 @@
 }
 body {
   min-height: 100vh;
-  background-color: crimson;
+  background-color: rgb(150, 220, 20);
   display: flex;
   align-items: center;
   justify-content: center;
